welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: Invalid literal number
    for (i<- 1to 2){
             ^PatternPicture:3: error: illegal start of simple expression
    for (i<- 1to 2){
             ^PatternPicture:14: error: ')' expected but '}' found.
  }
  ^PatternPicture:79: error: ';' expected but ',' found.
  gauche,recule();recule();droite()
        ^